# miso-2048

./: .gitignore  README.md  cabal.project  default.nix  flake.nix  hs-2048.nix  hs2048.cabal
.github/workflows/: main.yml
src/: GameModel.hs  InputModel.hs  Logic.hs  Main.hs  Rendering.hs
static/: index.html  main.css
