name:                hs2048
version:             0.1.0.0
synopsis:            An implementation of 2048 using Haskell and Miso
category:            Web
build-type:          Simple
cabal-version:       >=1.10
license:             BSD3
license-file:        LICENSE

executable app
  if arch(wasm32)
    cpp-options:
      -DWASM

  if arch(javascript)
     ld-options:
       -sEXPORTED_RUNTIME_METHODS=HEAP8

  if arch(wasm32)
    ghc-options:
       -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"

  ghc-options:
     -funbox-strict-fields -O2 -ferror-spans -fspecialise-aggressively -Wall

  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       aeson,
                       aeson-pretty,
                       base,
                       containers,
                       miso,
                       mtl,
                       random
  other-modules:       GameModel
                       InputModel
                       Logic
                       Rendering
  default-language:    Haskell2010
